best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-11-06 -->
+<!-- 2023-11-08 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -84,6 +84,8 @@
 
 
 <colgroup>
+<col  class="org-right">
+
 <col  class="org-left">
 
 <col  class="org-right">
@@ -92,6 +94,7 @@
 </colgroup>
 <thead>
 <tr>
+<th scope="col" class="org-right">G</th>
 <th scope="col" class="org-left">姓名</th>
 <th scope="col" class="org-right">2023-09-07</th>
 <th scope="col" class="org-right">2023-10-30</th>
@@ -99,294 +102,343 @@
 </thead>
 <tbody>
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">刘鹏</td>
 <td class="org-right">1</td>
 <td class="org-right">7</td>
 </tr>
 
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">甘成杰</td>
 <td class="org-right">2</td>
 <td class="org-right">1</td>
 </tr>
 
 <tr>
+<td class="org-right">1</td>
 <td class="org-left">杨富</td>
 <td class="org-right">3</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">1</td>
 <td class="org-left">江坤涛</td>
 <td class="org-right">4</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">1</td>
 <td class="org-left">程春平</td>
 <td class="org-right">5</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">吴淑豪</td>
 <td class="org-right">6</td>
 <td class="org-right">3</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">刘金麓</td>
 <td class="org-right">7</td>
 <td class="org-right">14</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">邓义柏</td>
 <td class="org-right">8</td>
 <td class="org-right">10</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">梁炽勇</td>
 <td class="org-right">9</td>
 <td class="org-right">24</td>
 </tr>
 
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">林俊贤</td>
 <td class="org-right">10</td>
 <td class="org-right">22</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">黄锡东</td>
 <td class="org-right">11</td>
 <td class="org-right">13</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">李毅</td>
 <td class="org-right">12</td>
 <td class="org-right">19</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">李进斌</td>
 <td class="org-right">13</td>
 <td class="org-right">21</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">杨耀嘉</td>
 <td class="org-right">14</td>
 <td class="org-right">23</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">官名福</td>
 <td class="org-right">15</td>
 <td class="org-right">12</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">陈宇川</td>
 <td class="org-right">16</td>
 <td class="org-right">16</td>
 </tr>
 
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">杜喆</td>
 <td class="org-right">17</td>
 <td class="org-right">26</td>
 </tr>
 
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">黄颜徽</td>
 <td class="org-right">18</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">罗秀洋</td>
 <td class="org-right">19</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">王艺楠</td>
 <td class="org-right">20</td>
 <td class="org-right">18</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">盘泽强</td>
 <td class="org-right">21</td>
 <td class="org-right">15</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">李德致</td>
 <td class="org-right">22</td>
 <td class="org-right">20</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">王上标</td>
 <td class="org-right">23</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">肖毅良</td>
 <td class="org-right">24</td>
 <td class="org-right">29</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">张明达</td>
 <td class="org-right">25</td>
 <td class="org-right">27</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">周远龙</td>
 <td class="org-right">26</td>
 <td class="org-right">28</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">王俊杰</td>
 <td class="org-right">27</td>
 <td class="org-right">9</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">曾翔</td>
 <td class="org-right">28</td>
 <td class="org-right">11</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">江金涛</td>
 <td class="org-right">29</td>
 <td class="org-right">5</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">陈翕</td>
 <td class="org-right">30</td>
 <td class="org-right">6</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">黄军帮</td>
 <td class="org-right">31</td>
 <td class="org-right">8</td>
 </tr>
 
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">刘天宇</td>
 <td class="org-right">32</td>
 <td class="org-right">2</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">吴嘉城</td>
 <td class="org-right">33</td>
 <td class="org-right">4</td>
 </tr>
 
 <tr>
+<td class="org-right">1</td>
 <td class="org-left">夏志豪</td>
 <td class="org-right">34</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">林显诚</td>
 <td class="org-right">35</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">周枫</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">5</td>
 <td class="org-left">曾宏燊</td>
 <td class="org-right">-</td>
 <td class="org-right">17</td>
 </tr>
 
 <tr>
+<td class="org-right">2</td>
 <td class="org-left">肖峰</td>
 <td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">左亮</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">符文财</td>
 <td class="org-right">-</td>
 <td class="org-right">25</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">谢鹤鸣</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">邓炜祺</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">1</td>
 <td class="org-left">韦代帅</td>
 <td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">郭小龙</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">魏坤</td>
 <td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">车斌涛</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">4</td>
 <td class="org-left">何锦晖</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">30</td>
 </tr>
 
 <tr>
+<td class="org-right">3</td>
 <td class="org-left">刘仁杰</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
+<td class="org-right">6</td>
 <td class="org-left">黄萧</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
@@ -402,12 +454,39 @@
 <li>2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行</li>
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
 </ul>
+
+
+<p>
+1.夏志豪 
+1.杨富   
+1.江坤涛 
+1.程春平 
+1.韦代帅 
+</p>
+
+<p>
+2.林显诚 
+2.肖峰   
+2.黄颜徽
+</p>
+
+<p>
+3.魏坤   
+</p>
+
+<p>
+4.罗秀洋  
+</p>
+
+<p>
+6.黄萧   
+</p>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-11-06</p>
+<p class="date">Created: 2023-11-08</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
