best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-11-08 -->
+<!-- 2023-12-27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -119,21 +119,21 @@
 <td class="org-right">1</td>
 <td class="org-left">杨富</td>
 <td class="org-right">3</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">江坤涛</td>
 <td class="org-right">4</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">程春平</td>
 <td class="org-right">5</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
@@ -224,14 +224,14 @@
 <td class="org-right">2</td>
 <td class="org-left">黄颜徽</td>
 <td class="org-right">18</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">罗秀洋</td>
 <td class="org-right">19</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
@@ -336,14 +336,14 @@
 <td class="org-right">1</td>
 <td class="org-left">夏志豪</td>
 <td class="org-right">34</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">林显诚</td>
 <td class="org-right">35</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
@@ -399,7 +399,7 @@
 <td class="org-right">1</td>
 <td class="org-left">韦代帅</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">-</td>
 </tr>
 
 <tr>
@@ -454,39 +454,12 @@
 <li>2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行</li>
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
 </ul>
-
-
-<p>
-1.夏志豪 
-1.杨富   
-1.江坤涛 
-1.程春平 
-1.韦代帅 
-</p>
-
-<p>
-2.林显诚 
-2.肖峰   
-2.黄颜徽
-</p>
-
-<p>
-3.魏坤   
-</p>
-
-<p>
-4.罗秀洋  
-</p>
-
-<p>
-6.黄萧   
-</p>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-11-08</p>
+<p class="date">Created: 2023-12-27</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
