--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-11-08 -->
+<!-- 2023-12-27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 192</title>
@@ -52,6 +52,8 @@
 <col  class="org-left">
 
 <col  class="org-right">
+
+<col  class="org-right">
 </colgroup>
 <thead>
 <tr>
@@ -59,6 +61,7 @@
 <th scope="col" class="org-left">姓名</th>
 <th scope="col" class="org-left">2023-09-06</th>
 <th scope="col" class="org-right">2023-10-31</th>
+<th scope="col" class="org-right">2023-12-26</th>
 </tr>
 </thead>
 <tbody>
@@ -67,6 +70,7 @@
 <td class="org-left">李吉</td>
 <td class="org-left">1</td>
 <td class="org-right">12</td>
+<td class="org-right">1</td>
 </tr>
 
 <tr>
@@ -74,12 +78,46 @@
 <td class="org-left">段文潇</td>
 <td class="org-left">2</td>
 <td class="org-right">1</td>
+<td class="org-right">2</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">黄飞超</td>
+<td class="org-left">-</td>
+<td class="org-right">14</td>
+<td class="org-right">3</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">许焕圣</td>
+<td class="org-left">7</td>
+<td class="org-right">6</td>
+<td class="org-right">4</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">古远东</td>
+<td class="org-left">18</td>
+<td class="org-right">8</td>
+<td class="org-right">5</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">黄可彬</td>
+<td class="org-left">19</td>
+<td class="org-right">9</td>
+<td class="org-right">6</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">余海中</td>
 <td class="org-left">3</td>
+<td class="org-right">17</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -87,6 +125,7 @@
 <td class="org-right">1</td>
 <td class="org-left">谭鑫</td>
 <td class="org-left">4</td>
+<td class="org-right">13</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -95,20 +134,15 @@
 <td class="org-left">高旻昱</td>
 <td class="org-left">5</td>
 <td class="org-right">4</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">麦天河</td>
 <td class="org-left">6</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">许焕圣</td>
-<td class="org-left">7</td>
-<td class="org-right">6</td>
 </tr>
 
 <tr>
@@ -116,12 +150,14 @@
 <td class="org-left">何华为</td>
 <td class="org-left">8</td>
 <td class="org-right">7</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">王海波</td>
 <td class="org-left">9</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -130,6 +166,7 @@
 <td class="org-left">肖义珥</td>
 <td class="org-left">10</td>
 <td class="org-right">11</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -137,12 +174,14 @@
 <td class="org-left">刘广鸿</td>
 <td class="org-left">11</td>
 <td class="org-right">3</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">刘翔</td>
 <td class="org-left">12</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -151,12 +190,14 @@
 <td class="org-left">段文锋</td>
 <td class="org-left">13</td>
 <td class="org-right">2</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">刘虹佑</td>
 <td class="org-left">14</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -165,6 +206,7 @@
 <td class="org-left">张甘霖</td>
 <td class="org-left">15</td>
 <td class="org-right">5</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -172,33 +214,22 @@
 <td class="org-left">李岳元</td>
 <td class="org-left">16</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">段京文</td>
 <td class="org-left">17</td>
+<td class="org-right">18</td>
 <td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">古远东</td>
-<td class="org-left">18</td>
-<td class="org-right">8</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">黄可彬</td>
-<td class="org-left">19</td>
-<td class="org-right">9</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">苏大明</td>
 <td class="org-left">-</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -207,12 +238,14 @@
 <td class="org-left">沈艺宏</td>
 <td class="org-left">-</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">李泽俊</td>
 <td class="org-left">-</td>
+<td class="org-right">15</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -220,6 +253,7 @@
 <td class="org-right">2</td>
 <td class="org-left">李耀武</td>
 <td class="org-left">-</td>
+<td class="org-right">21</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -227,6 +261,7 @@
 <td class="org-right">6</td>
 <td class="org-left">刘泽泉</td>
 <td class="org-left">-</td>
+<td class="org-right">20</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -235,12 +270,14 @@
 <td class="org-left">吴幸林</td>
 <td class="org-left">-</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">唐景富</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -249,12 +286,14 @@
 <td class="org-left">叶宇</td>
 <td class="org-left">-</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">卢德涛</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -262,6 +301,7 @@
 <td class="org-right">1</td>
 <td class="org-left">陆宇轩</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -269,6 +309,7 @@
 <td class="org-right">5</td>
 <td class="org-left">韦金良</td>
 <td class="org-left">-</td>
+<td class="org-right">16</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -277,12 +318,14 @@
 <td class="org-left">饶展源</td>
 <td class="org-left">-</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">5</td>
 <td class="org-left">郭榕荣</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -290,6 +333,7 @@
 <td class="org-right">4</td>
 <td class="org-left">贝俊霖</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -297,6 +341,7 @@
 <td class="org-right">4</td>
 <td class="org-left">陈梓鑫</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -304,13 +349,7 @@
 <td class="org-right">5</td>
 <td class="org-left">梁泽文</td>
 <td class="org-left">-</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">5</td>
-<td class="org-left">黄飞超</td>
-<td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -318,6 +357,7 @@
 <td class="org-right">6</td>
 <td class="org-left">周永久</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -325,6 +365,7 @@
 <td class="org-right">6</td>
 <td class="org-left">张桂毓</td>
 <td class="org-left">-</td>
+<td class="org-right">19</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -332,6 +373,7 @@
 <td class="org-right">4</td>
 <td class="org-left">何晓东</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -340,6 +382,7 @@
 <td class="org-left">薛进超</td>
 <td class="org-left">-</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -347,12 +390,14 @@
 <td class="org-left">岑法政</td>
 <td class="org-left">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">谢晓中</td>
 <td class="org-left">-</td>
+<td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -361,6 +406,7 @@
 <td class="org-left">陈颖聪</td>
 <td class="org-left">-</td>
 <td class="org-right">10</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 </tbody>
 </table>
@@ -371,13 +417,14 @@
 <ul class="org-ul">
 <li>2023-09-06: 1.hello.txt, 完成从创建文件、编译到运行的整个过程</li>
 <li>2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制</li>
+<li>2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方</li>
 </ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-11-08</p>
+<p class="date">Created: 2023-12-27</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
