best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-12-27 -->
+<!-- 2023-12-28 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -91,6 +91,8 @@
 <col  class="org-right">
 
 <col  class="org-right">
+
+<col  class="org-right">
 </colgroup>
 <thead>
 <tr>
@@ -98,6 +100,7 @@
 <th scope="col" class="org-left">姓名</th>
 <th scope="col" class="org-right">2023-09-07</th>
 <th scope="col" class="org-right">2023-10-30</th>
+<th scope="col" class="org-right">2023-12-28</th>
 </tr>
 </thead>
 <tbody>
@@ -106,6 +109,7 @@
 <td class="org-left">刘鹏</td>
 <td class="org-right">1</td>
 <td class="org-right">7</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -113,6 +117,7 @@
 <td class="org-left">甘成杰</td>
 <td class="org-right">2</td>
 <td class="org-right">1</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -120,6 +125,7 @@
 <td class="org-left">杨富</td>
 <td class="org-right">3</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -127,6 +133,7 @@
 <td class="org-left">江坤涛</td>
 <td class="org-right">4</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -134,6 +141,7 @@
 <td class="org-left">程春平</td>
 <td class="org-right">5</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -141,6 +149,7 @@
 <td class="org-left">吴淑豪</td>
 <td class="org-right">6</td>
 <td class="org-right">3</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -148,6 +157,7 @@
 <td class="org-left">刘金麓</td>
 <td class="org-right">7</td>
 <td class="org-right">14</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -155,6 +165,7 @@
 <td class="org-left">邓义柏</td>
 <td class="org-right">8</td>
 <td class="org-right">10</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -162,6 +173,7 @@
 <td class="org-left">梁炽勇</td>
 <td class="org-right">9</td>
 <td class="org-right">24</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -169,6 +181,7 @@
 <td class="org-left">林俊贤</td>
 <td class="org-right">10</td>
 <td class="org-right">22</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -176,6 +189,7 @@
 <td class="org-left">黄锡东</td>
 <td class="org-right">11</td>
 <td class="org-right">13</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -183,6 +197,7 @@
 <td class="org-left">李毅</td>
 <td class="org-right">12</td>
 <td class="org-right">19</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -190,6 +205,7 @@
 <td class="org-left">李进斌</td>
 <td class="org-right">13</td>
 <td class="org-right">21</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -197,6 +213,7 @@
 <td class="org-left">杨耀嘉</td>
 <td class="org-right">14</td>
 <td class="org-right">23</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -204,6 +221,7 @@
 <td class="org-left">官名福</td>
 <td class="org-right">15</td>
 <td class="org-right">12</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -211,6 +229,7 @@
 <td class="org-left">陈宇川</td>
 <td class="org-right">16</td>
 <td class="org-right">16</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -218,6 +237,7 @@
 <td class="org-left">杜喆</td>
 <td class="org-right">17</td>
 <td class="org-right">26</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -225,6 +245,7 @@
 <td class="org-left">黄颜徽</td>
 <td class="org-right">18</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -232,6 +253,7 @@
 <td class="org-left">罗秀洋</td>
 <td class="org-right">19</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -239,6 +261,7 @@
 <td class="org-left">王艺楠</td>
 <td class="org-right">20</td>
 <td class="org-right">18</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -246,6 +269,7 @@
 <td class="org-left">盘泽强</td>
 <td class="org-right">21</td>
 <td class="org-right">15</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -253,6 +277,7 @@
 <td class="org-left">李德致</td>
 <td class="org-right">22</td>
 <td class="org-right">20</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -260,6 +285,7 @@
 <td class="org-left">王上标</td>
 <td class="org-right">23</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -267,6 +293,7 @@
 <td class="org-left">肖毅良</td>
 <td class="org-right">24</td>
 <td class="org-right">29</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -274,6 +301,7 @@
 <td class="org-left">张明达</td>
 <td class="org-right">25</td>
 <td class="org-right">27</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -281,6 +309,7 @@
 <td class="org-left">周远龙</td>
 <td class="org-right">26</td>
 <td class="org-right">28</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -288,6 +317,7 @@
 <td class="org-left">王俊杰</td>
 <td class="org-right">27</td>
 <td class="org-right">9</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -295,6 +325,7 @@
 <td class="org-left">曾翔</td>
 <td class="org-right">28</td>
 <td class="org-right">11</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -302,6 +333,7 @@
 <td class="org-left">江金涛</td>
 <td class="org-right">29</td>
 <td class="org-right">5</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -309,6 +341,7 @@
 <td class="org-left">陈翕</td>
 <td class="org-right">30</td>
 <td class="org-right">6</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -316,6 +349,7 @@
 <td class="org-left">黄军帮</td>
 <td class="org-right">31</td>
 <td class="org-right">8</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -323,6 +357,7 @@
 <td class="org-left">刘天宇</td>
 <td class="org-right">32</td>
 <td class="org-right">2</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -330,6 +365,7 @@
 <td class="org-left">吴嘉城</td>
 <td class="org-right">33</td>
 <td class="org-right">4</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -337,6 +373,7 @@
 <td class="org-left">夏志豪</td>
 <td class="org-right">34</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -344,6 +381,7 @@
 <td class="org-left">林显诚</td>
 <td class="org-right">35</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -351,6 +389,7 @@
 <td class="org-left">周枫</td>
 <td class="org-right">-</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -358,12 +397,14 @@
 <td class="org-left">曾宏燊</td>
 <td class="org-right">-</td>
 <td class="org-right">17</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">肖峰</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -372,6 +413,7 @@
 <td class="org-left">左亮</td>
 <td class="org-right">-</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -379,6 +421,7 @@
 <td class="org-left">符文财</td>
 <td class="org-right">-</td>
 <td class="org-right">25</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -386,6 +429,7 @@
 <td class="org-left">谢鹤鸣</td>
 <td class="org-right">-</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -393,6 +437,7 @@
 <td class="org-left">邓炜祺</td>
 <td class="org-right">-</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -400,6 +445,7 @@
 <td class="org-left">韦代帅</td>
 <td class="org-right">-</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -407,12 +453,14 @@
 <td class="org-left">郭小龙</td>
 <td class="org-right">-</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">3</td>
 <td class="org-left">魏坤</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -421,6 +469,7 @@
 <td class="org-left">车斌涛</td>
 <td class="org-right">-</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -428,6 +477,7 @@
 <td class="org-left">何锦晖</td>
 <td class="org-right">-</td>
 <td class="org-right">30</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
@@ -435,11 +485,13 @@
 <td class="org-left">刘仁杰</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">-</td>
+<td class="org-right">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-right">6</td>
 <td class="org-left">黄萧</td>
+<td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -453,13 +505,14 @@
 <ul class="org-ul">
 <li>2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行</li>
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
+<li>2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]</li>
 </ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-12-27</p>
+<p class="date">Created: 2023-12-28</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
