best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-12-27 -->
+<!-- 2024-01-02 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 191</title>
@@ -70,7 +70,7 @@
 <td class="org-left">陈嘉鹏</td>
 <td class="org-right">1</td>
 <td class="org-right">2</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">2</td>
 </tr>
 
 <tr>
@@ -166,7 +166,7 @@
 <td class="org-left">刘志豪</td>
 <td class="org-right">13</td>
 <td class="org-right">3</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">1</td>
 </tr>
 
 <tr>
@@ -272,7 +272,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-12-27</p>
+<p class="date">Created: 2024-01-02</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
