--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2023-12-28 -->
+<!-- 2024-01-03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -23,7 +23,7 @@
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
 <li><a href="#orgaf9a146">1. 信息</a></li>
-<li><a href="#orgbf22b8c">2. 测验结果</a></li>
+<li><a href="#org9c19a34">2. 结果</a></li>
 </ul>
 </div>
 </nav>
@@ -77,8 +77,8 @@
 </div>
 </section>
 
-<section id="outline-container-orgbf22b8c" class="outline-2">
-<h2 id="orgbf22b8c"><span class="section-number-2">2.</span> 测验结果</h2>
+<section id="outline-container-org9c19a34" class="outline-2">
+<h2 id="org9c19a34"><span class="section-number-2">2.</span> 结果</h2>
 <div class="outline-text-2" id="text-2">
 <table>
 
@@ -106,18 +106,66 @@
 <tbody>
 <tr>
 <td class="org-right">2</td>
-<td class="org-left">刘鹏</td>
+<td class="org-left">甘成杰</td>
+<td class="org-right">2</td>
 <td class="org-right">1</td>
-<td class="org-right">7</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">1</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">官名福</td>
+<td class="org-right">15</td>
+<td class="org-right">12</td>
+<td class="org-right">2</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">肖毅良</td>
+<td class="org-right">24</td>
+<td class="org-right">29</td>
+<td class="org-right">3</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
-<td class="org-left">甘成杰</td>
-<td class="org-right">2</td>
+<td class="org-left">刘鹏</td>
 <td class="org-right">1</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">7</td>
+<td class="org-right">4</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">刘天宇</td>
+<td class="org-right">32</td>
+<td class="org-right">2</td>
+<td class="org-right">5</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">林俊贤</td>
+<td class="org-right">10</td>
+<td class="org-right">22</td>
+<td class="org-right">6</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">吴淑豪</td>
+<td class="org-right">6</td>
+<td class="org-right">3</td>
+<td class="org-right">7</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">江金涛</td>
+<td class="org-right">29</td>
+<td class="org-right">5</td>
+<td class="org-right">8</td>
 </tr>
 
 <tr>
@@ -145,14 +193,6 @@
 </tr>
 
 <tr>
-<td class="org-right">6</td>
-<td class="org-left">吴淑豪</td>
-<td class="org-right">6</td>
-<td class="org-right">3</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">5</td>
 <td class="org-left">刘金麓</td>
 <td class="org-right">7</td>
@@ -173,14 +213,6 @@
 <td class="org-left">梁炽勇</td>
 <td class="org-right">9</td>
 <td class="org-right">24</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">2</td>
-<td class="org-left">林俊贤</td>
-<td class="org-right">10</td>
-<td class="org-right">22</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -213,14 +245,6 @@
 <td class="org-left">杨耀嘉</td>
 <td class="org-right">14</td>
 <td class="org-right">23</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">官名福</td>
-<td class="org-right">15</td>
-<td class="org-right">12</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -289,14 +313,6 @@
 </tr>
 
 <tr>
-<td class="org-right">6</td>
-<td class="org-left">肖毅良</td>
-<td class="org-right">24</td>
-<td class="org-right">29</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-right">3</td>
 <td class="org-left">张明达</td>
 <td class="org-right">25</td>
@@ -330,14 +346,6 @@
 
 <tr>
 <td class="org-right">6</td>
-<td class="org-left">江金涛</td>
-<td class="org-right">29</td>
-<td class="org-right">5</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
 <td class="org-left">陈翕</td>
 <td class="org-right">30</td>
 <td class="org-right">6</td>
@@ -349,14 +357,6 @@
 <td class="org-left">黄军帮</td>
 <td class="org-right">31</td>
 <td class="org-right">8</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">2</td>
-<td class="org-left">刘天宇</td>
-<td class="org-right">32</td>
-<td class="org-right">2</td>
 <td class="org-right">&#xa0;</td>
 </tr>
 
@@ -512,7 +512,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2023-12-28</p>
+<p class="date">Created: 2024-01-03</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
