best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-02 -->
+<!-- 2024-01-03 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 191</title>
@@ -110,7 +110,7 @@
 <td class="org-left">覃宇江</td>
 <td class="org-right">6</td>
 <td class="org-right">4</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">3</td>
 </tr>
 
 <tr>
@@ -142,7 +142,7 @@
 <td class="org-left">刘燃东</td>
 <td class="org-right">10</td>
 <td class="org-right">17</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">5</td>
 </tr>
 
 <tr>
@@ -198,7 +198,7 @@
 <td class="org-left">吴志挥</td>
 <td class="org-right">17</td>
 <td class="org-right">9</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">4</td>
 </tr>
 
 <tr>
@@ -265,14 +265,14 @@
 <ul class="org-ul">
 <li>2023-09-11, 创建 helloworld、编译、运行，独立完成</li>
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
-<li>2023-12-25, 使用 Winform 实现一个 BMI 计算的应用</li>
+<li>2023-12-25, 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方</li>
 </ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-01-02</p>
+<p class="date">Created: 2024-01-03</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
