--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -398,7 +398,7 @@
 <td class="org-left">薛进超</td>
 <td class="org-left">-</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">33</td>
 </tr>
 
 <tr>
