--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-03 -->
+<!-- 2024-01-04 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 191</title>
@@ -174,7 +174,7 @@
 <td class="org-left">韦海永</td>
 <td class="org-right">14</td>
 <td class="org-right">5</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">6</td>
 </tr>
 
 <tr>
@@ -272,7 +272,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-01-03</p>
+<p class="date">Created: 2024-01-04</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
