best_try_and_best_chance

--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -107,10 +107,18 @@
 
 <tr>
 <td class="org-right">1</td>
+<td class="org-left">陆宇轩</td>
+<td class="org-left">-</td>
+<td class="org-right">-</td>
+<td class="org-right">35</td>
+</tr>
+
+<tr>
+<td class="org-right">1</td>
 <td class="org-left">刘翔</td>
 <td class="org-left">12</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">36</td>
 </tr>
 
 <tr>
@@ -118,15 +126,7 @@
 <td class="org-left">李岳元</td>
 <td class="org-left">16</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">1</td>
-<td class="org-left">陆宇轩</td>
-<td class="org-left">-</td>
-<td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">40</td>
 </tr>
 
 <tr>
@@ -238,7 +238,7 @@
 <td class="org-left">段文锋</td>
 <td class="org-left">13</td>
 <td class="org-right">2</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">34</td>
 </tr>
 
 <tr>
@@ -291,18 +291,18 @@
 
 <tr>
 <td class="org-right">4</td>
-<td class="org-left">卢德涛</td>
+<td class="org-left">何晓东</td>
 <td class="org-left">-</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">41</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
-<td class="org-left">何晓东</td>
+<td class="org-left">卢德涛</td>
 <td class="org-left">-</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">42</td>
 </tr>
 
 <tr>
@@ -387,18 +387,10 @@
 
 <tr>
 <td class="org-right">6</td>
-<td class="org-left">刘泽泉</td>
-<td class="org-left">-</td>
-<td class="org-right">20</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">6</td>
 <td class="org-left">周永久</td>
 <td class="org-left">-</td>
 <td class="org-right">-</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">37</td>
 </tr>
 
 <tr>
@@ -406,7 +398,15 @@
 <td class="org-left">张桂毓</td>
 <td class="org-left">-</td>
 <td class="org-right">19</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">38</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">刘泽泉</td>
+<td class="org-left">-</td>
+<td class="org-right">20</td>
+<td class="org-right">39</td>
 </tr>
 </tbody>
 </table>
@@ -417,7 +417,7 @@
 任务详情:
 </p>
 <ul class="org-ul">
-<li>2023-09-06: 1.hello.txt, 完成从创建文件、编译到运行的整个过程</li>
+<li>2023-09-06, 1.hello.txt, 完成从创建文件、编译到运行的整个过程</li>
 <li>2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制</li>
 <li>2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方</li>
 </ul>
