best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-05 -->
+<!-- 2024-01-15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 191</title>
@@ -93,7 +93,7 @@
 <td class="org-right">4</td>
 <td class="org-left">吴志挥</td>
 <td class="org-right">17</td>
-<td class="org-right">9</td>
+<td class="org-right">10</td>
 <td class="org-right">4</td>
 </tr>
 
@@ -101,7 +101,7 @@
 <td class="org-right">3</td>
 <td class="org-left">刘燃东</td>
 <td class="org-right">10</td>
-<td class="org-right">17</td>
+<td class="org-right">18</td>
 <td class="org-right">5</td>
 </tr>
 
@@ -118,7 +118,7 @@
 <td class="org-left">潘嘉豪</td>
 <td class="org-right">-</td>
 <td class="org-right">6</td>
-<td class="org-right">6</td>
+<td class="org-right">7</td>
 </tr>
 
 <tr>
@@ -126,7 +126,7 @@
 <td class="org-left">唐瑞钦</td>
 <td class="org-right">7</td>
 <td class="org-right">1</td>
-<td class="org-right">7</td>
+<td class="org-right">8</td>
 </tr>
 
 <tr>
@@ -134,31 +134,31 @@
 <td class="org-left">曾世强</td>
 <td class="org-right">8</td>
 <td class="org-right">6</td>
-<td class="org-right">8</td>
+<td class="org-right">9</td>
 </tr>
 
 <tr>
 <td class="org-right">4</td>
 <td class="org-left">张翔宇</td>
 <td class="org-right">16</td>
+<td class="org-right">11</td>
 <td class="org-right">10</td>
-<td class="org-right">9</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">李境松</td>
 <td class="org-right">12</td>
-<td class="org-right">15</td>
-<td class="org-right">10</td>
+<td class="org-right">16</td>
+<td class="org-right">11</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">刘宁</td>
 <td class="org-right">3</td>
-<td class="org-right">7</td>
-<td class="org-right">11</td>
+<td class="org-right">8</td>
+<td class="org-right">12</td>
 </tr>
 
 <tr>
@@ -166,23 +166,23 @@
 <td class="org-left">林宝荣</td>
 <td class="org-right">&#xa0;</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">11</td>
+<td class="org-right">13</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">黄佳鹏</td>
 <td class="org-right">5</td>
-<td class="org-right">13</td>
-<td class="org-right">12</td>
+<td class="org-right">14</td>
+<td class="org-right">14</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">魏智锋</td>
 <td class="org-right">9</td>
-<td class="org-right">12</td>
 <td class="org-right">13</td>
+<td class="org-right">15</td>
 </tr>
 
 <tr>
@@ -190,15 +190,15 @@
 <td class="org-left">朱荣如</td>
 <td class="org-right">-</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">14</td>
+<td class="org-right">16</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">秦铭杉</td>
 <td class="org-right">4</td>
-<td class="org-right">14</td>
 <td class="org-right">15</td>
+<td class="org-right">17</td>
 </tr>
 
 <tr>
@@ -206,23 +206,39 @@
 <td class="org-left">刁扬春</td>
 <td class="org-right">19</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">16</td>
+<td class="org-right">18</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">曾凯</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">11</td>
-<td class="org-right">17</td>
+<td class="org-right">12</td>
+<td class="org-right">19</td>
 </tr>
 
 <tr>
 <td class="org-right">1</td>
 <td class="org-left">叶子超</td>
 <td class="org-right">15</td>
-<td class="org-right">8</td>
+<td class="org-right">9</td>
+<td class="org-right">20</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">岑宇森</td>
 <td class="org-right">&#xa0;</td>
+<td class="org-right">20</td>
+<td class="org-right">21</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">陈述亮</td>
+<td class="org-right">11</td>
+<td class="org-right">17</td>
+<td class="org-right">22</td>
 </tr>
 
 <tr>
@@ -230,29 +246,13 @@
 <td class="org-left">陈子健</td>
 <td class="org-right">18</td>
 <td class="org-right">&#xa0;</td>
-<td class="org-right">&#xa0;</td>
+<td class="org-right">23</td>
 </tr>
 
 <tr>
 <td class="org-right">2</td>
 <td class="org-left">廖哲</td>
 <td class="org-right">2</td>
-<td class="org-right">18</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">陈述亮</td>
-<td class="org-right">11</td>
-<td class="org-right">16</td>
-<td class="org-right">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-right">3</td>
-<td class="org-left">岑宇森</td>
-<td class="org-right">&#xa0;</td>
 <td class="org-right">19</td>
 <td class="org-right">&#xa0;</td>
 </tr>
@@ -267,12 +267,260 @@
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
 <li>2023-12-25, 使用 Winform 实现一个 BMI 计算的应用。要求布局合理，美观大方</li>
 </ul>
+
+<p>
+期末分数 (2024.1.15):
+</p>
+<table>
+
+
+<colgroup>
+<col  class="org-right">
+
+<col  class="org-left">
+
+<col  class="org-right">
+
+<col  class="org-right">
+
+<col  class="org-right">
+
+<col  class="org-right">
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-right">No.</th>
+<th scope="col" class="org-left">Name</th>
+<th scope="col" class="org-right">Test1</th>
+<th scope="col" class="org-right">Test2</th>
+<th scope="col" class="org-right">Test3</th>
+<th scope="col" class="org-right">Final</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">陈嘉鹏</td>
+<td class="org-right">100</td>
+<td class="org-right">99</td>
+<td class="org-right">99</td>
+<td class="org-right">99</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">覃宇江</td>
+<td class="org-right">95</td>
+<td class="org-right">97</td>
+<td class="org-right">98</td>
+<td class="org-right">97</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">唐瑞钦</td>
+<td class="org-right">94</td>
+<td class="org-right">100</td>
+<td class="org-right">93</td>
+<td class="org-right">96</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">刘志豪</td>
+<td class="org-right">88</td>
+<td class="org-right">98</td>
+<td class="org-right">100</td>
+<td class="org-right">95</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">韦海永</td>
+<td class="org-right">87</td>
+<td class="org-right">96</td>
+<td class="org-right">95</td>
+<td class="org-right">93</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">曾世强</td>
+<td class="org-right">93</td>
+<td class="org-right">95</td>
+<td class="org-right">92</td>
+<td class="org-right">93</td>
+</tr>
+
+<tr>
+<td class="org-right">7</td>
+<td class="org-left">刘宁</td>
+<td class="org-right">98</td>
+<td class="org-right">93</td>
+<td class="org-right">89</td>
+<td class="org-right">93</td>
+</tr>
+
+<tr>
+<td class="org-right">8</td>
+<td class="org-left">吴志挥</td>
+<td class="org-right">84</td>
+<td class="org-right">91</td>
+<td class="org-right">97</td>
+<td class="org-right">91</td>
+</tr>
+
+<tr>
+<td class="org-right">9</td>
+<td class="org-left">刘燃东</td>
+<td class="org-right">91</td>
+<td class="org-right">83</td>
+<td class="org-right">96</td>
+<td class="org-right">90</td>
+</tr>
+
+<tr>
+<td class="org-right">10</td>
+<td class="org-left">黄佳鹏</td>
+<td class="org-right">96</td>
+<td class="org-right">87</td>
+<td class="org-right">87</td>
+<td class="org-right">90</td>
+</tr>
+
+<tr>
+<td class="org-right">11</td>
+<td class="org-left">张翔宇</td>
+<td class="org-right">85</td>
+<td class="org-right">90</td>
+<td class="org-right">91</td>
+<td class="org-right">89</td>
+</tr>
+
+<tr>
+<td class="org-right">12</td>
+<td class="org-left">魏智锋</td>
+<td class="org-right">92</td>
+<td class="org-right">88</td>
+<td class="org-right">86</td>
+<td class="org-right">89</td>
+</tr>
+
+<tr>
+<td class="org-right">13</td>
+<td class="org-left">秦铭杉</td>
+<td class="org-right">97</td>
+<td class="org-right">86</td>
+<td class="org-right">84</td>
+<td class="org-right">89</td>
+</tr>
+
+<tr>
+<td class="org-right">14</td>
+<td class="org-left">李境松</td>
+<td class="org-right">89</td>
+<td class="org-right">85</td>
+<td class="org-right">90</td>
+<td class="org-right">88</td>
+</tr>
+
+<tr>
+<td class="org-right">15</td>
+<td class="org-left">叶子超</td>
+<td class="org-right">86</td>
+<td class="org-right">92</td>
+<td class="org-right">81</td>
+<td class="org-right">86</td>
+</tr>
+
+<tr>
+<td class="org-right">16</td>
+<td class="org-left">陈述亮</td>
+<td class="org-right">90</td>
+<td class="org-right">84</td>
+<td class="org-right">79</td>
+<td class="org-right">84</td>
+</tr>
+
+<tr>
+<td class="org-right">17</td>
+<td class="org-left">潘嘉豪</td>
+<td class="org-right">60</td>
+<td class="org-right">95</td>
+<td class="org-right">94</td>
+<td class="org-right">83</td>
+</tr>
+
+<tr>
+<td class="org-right">18</td>
+<td class="org-left">廖哲</td>
+<td class="org-right">99</td>
+<td class="org-right">82</td>
+<td class="org-right">60</td>
+<td class="org-right">80</td>
+</tr>
+
+<tr>
+<td class="org-right">19</td>
+<td class="org-left">曾凯</td>
+<td class="org-right">60</td>
+<td class="org-right">89</td>
+<td class="org-right">82</td>
+<td class="org-right">77</td>
+</tr>
+
+<tr>
+<td class="org-right">20</td>
+<td class="org-left">刁扬春</td>
+<td class="org-right">82</td>
+<td class="org-right">60</td>
+<td class="org-right">83</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">21</td>
+<td class="org-left">岑宇森</td>
+<td class="org-right">60</td>
+<td class="org-right">81</td>
+<td class="org-right">80</td>
+<td class="org-right">74</td>
+</tr>
+
+<tr>
+<td class="org-right">22</td>
+<td class="org-left">陈子健</td>
+<td class="org-right">83</td>
+<td class="org-right">60</td>
+<td class="org-right">78</td>
+<td class="org-right">74</td>
+</tr>
+
+<tr>
+<td class="org-right">23</td>
+<td class="org-left">林宝荣</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+<td class="org-right">88</td>
+<td class="org-right">69</td>
+</tr>
+
+<tr>
+<td class="org-right">24</td>
+<td class="org-left">朱荣如</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+<td class="org-right">85</td>
+<td class="org-right">68</td>
+</tr>
+</tbody>
+</table>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-01-05</p>
+<p class="date">Created: 2024-01-15</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
