--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-04 -->
+<!-- 2024-01-15 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 190</title>
@@ -503,7 +503,7 @@
 任务备注:
 </p>
 <ul class="org-ul">
-<li>2023-09-07: 01-张三.txt, 创建源文件、编写代码、编译、运行</li>
+<li>2023-09-07, 01-张三.txt, 创建源文件、编写代码、编译、运行</li>
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
 <li>2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]</li>
 </ul>
@@ -512,7 +512,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-01-04</p>
+<p class="date">Created: 2024-01-15</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
