best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -24,6 +24,7 @@
 <ul>
 <li><a href="#orgaf9a146">1. 信息</a></li>
 <li><a href="#org9c19a34">2. 结果</a></li>
+<li><a href="#org67e0fef">3. 寒假作业 (2024-01-15)</a></li>
 </ul>
 </div>
 </nav>
@@ -506,6 +507,33 @@
 <li>2023-09-07, 01-张三.txt, 创建源文件、编写代码、编译、运行</li>
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
 <li>2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]</li>
+</ul>
+</div>
+</section>
+
+
+<section id="outline-container-org67e0fef" class="outline-2">
+<h2 id="org67e0fef"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+做一个求取 BMI 的控制台应用:
+</p>
+<ol class="org-ol">
+<li>首先，提示用户输入身高和体重</li>
+<li>其次，根据用户输入的身高和体重，计算 BMI，并判定身体状态</li>
+<li>最后，输出给用户</li>
+<li>进入第一步，循环</li>
+</ol>
+
+<p>
+参考网站: <a href="https://cn.onlinebmicalculator.com/">https://cn.onlinebmicalculator.com/</a>
+</p>
+
+<p>
+其他:
+</p>
+<ul class="org-ul">
+<li>如果有兴趣的同学，可以自行学习一下 Winform 应用的创建，尝试使用窗口的方式将这个功能实现一下</li>
 </ul>
 </div>
 </section>
