best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -519,10 +519,10 @@
 做一个求取 BMI 的控制台应用:
 </p>
 <ol class="org-ol">
-<li>首先，提示用户输入身高和体重</li>
-<li>其次，根据用户输入的身高和体重，计算 BMI，并判定身体状态</li>
-<li>最后，输出给用户</li>
-<li>进入第一步，循环</li>
+<li>首先，提示用户输入身高和体重 (<code>Console.ReadLine</code>)</li>
+<li>其次，根据用户输入的身高和体重，计算 BMI，并判定身体状态 (<code>if..else</code>)</li>
+<li>最后，输出给用户 (<code>Console.WriteLine</code>)</li>
+<li>进入第一步，循环 (<code>for/while</code>)</li>
 </ol>
 
 <p>
